[tool.poetry]
name = "cap-5771-s24-hw2-grading"
version = "0.1.0"
description = "Homework 2 grading, CAP-5771, Spring 2024"
authors = ["erlebach <gordon.erlebach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pytest = "^8.0.0"
gradescope-utils = "^0.5.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
